--- a/formula_LIPS.html
+++ b/formula_LIPS.html
@@ -101,80 +101,118 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-01_lips_MLL-01.jpg" alt="Matte Liquid Lipstick">
+      <img src="images/formula/68_Lip%20Essence-01.jpg" alt="Lip Essence">
             <div class="caption">
-        <h3 class="FOh3">Matte Liquid Lipstick<br></h3>
-        <p>● Matte Finish <br>● Opague <br>● Long Lasting.
+        <h3 class="FOh3">Lip Essence<br></h3>
+        <p>Hydrating lip balm with aloe extract to soothe and almond oil to nourish.
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-02_lips_DLT-01.jpg" alt="Diamond Lip Topper">
-            <div class="caption">
-        <h3 class="FOh3">Diamond Lip Topper<br></h3>
-        <p>● Diamond glitters with strong staying power.<br><br>
-         </p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/1-03_lips_LT-01.jpg" alt="Lip Tint">
-            <div class="caption">
-        <h3 class="FOh3">Lip Tint<br></h3>
-        <p>● Sheer and Long Lasting color.<br><br><br>
-         </p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/1-04_lips_WLLM-01.jpg" alt="Waterproof Liquid Lipstick - Matt">
-            <div class="caption">
-        <h3 class="FOh3">Waterproof Liquid Lipstick - Matt<br></h3>
-        <p>● Matte Finish <br>● High Pigmentation <br>● Long Lasting.
-         </p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/1-05_lips_WLLS-01.jpg" alt="Waterproof Liquid Lipstick - Satin">
-            <div class="caption">
-        <h3 class="FOh3">Waterproof Liquid Lipstick - Satin<br></h3>
-        <p>● Satin Sheen <br>● High Pigmentation <br>● Long Lasting.
-         </p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/1-06_lips_LO-01.jpg" alt="Lip Oil">
+      <img src="images/formula/69_Lip%20Oil-01.jpg" alt="Lip Oil">
             <div class="caption">
         <h3 class="FOh3">Lip Oil<br></h3>
-        <p>● Nourishing and smooths lip lines. <br><br><br><br><br>
+        <p>Nourishes and smooths lip lines. Hydrating lip oil with vitamin E. Non-sticky. Paraben free.
          </p>
             </div>
     </div>
         </div>
-         
-<!--old-->         
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_lips_2-01.jpg" alt="Hydrating Lipgloss">
+      <img src="images/formula/77_Metallic%20Lip%20Gloss-01.jpg" alt="Metallic Lip Gloss">
             <div class="caption">
-        <h3 class="FOh3">Hydrating Lipgloss<br></h3>
-        <p>● The transparent formula provides lips with a crystal shine.   <br> 
-● Added nourishing essences for longer lasting hydration.<br></p>
+        <h3 class="FOh3">Metallic Lip Gloss<br></h3>
+        <p>High shimmer metallic lip gloss. Non-sticky. Paraben free.<br><br>
+         </p>
             </div>
     </div>
         </div>
-</div>
-</div>
-
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/78_Lip%20Lacquer-01.jpg" alt="Lip Lacquer">
+            <div class="caption">
+        <h3 class="FOh3">Lip Lacquer<br></h3>
+        <p>Non-sticky, highly pigmented. Gives lips a smooth, glossy finish.
+         </p>
+            </div>
     </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/79_Velvet%20Lip%20Cream-01.jpg" alt="Velvet Lip Cream & Marshmallow Lip Cream">
+            <div class="caption">
+        <h3 class="FOh3">Velvet Lip Cream & Marshmallow Lip Cream<br></h3>
+        <p>Creamy and velvety, like velvet on your lips. Matte finish. Paraben free.
+         </p>
+            </div>
+    </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/81_Non-Sticky%20Lip%20Gloss-01.jpg" alt="Non-Sticky Lip Gloss">
+            <div class="caption">
+        <h3 class="FOh3">Non-Sticky Lip Gloss<br></h3>
+        <p>Shimmery lip gloss that keeps your lips hydrated with vitamin E. Paraben free.<br><br><br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/80_Waterproof%20Liquid%20Lipstick-01.jpg" alt="Waterproof Liquid Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Waterproof Liquid Lipstick<br></h3>
+        <p>Waterproof, quick-drying, long-wearing. Paraben free.<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/80_Metallic%20Waterproof%20Liquid%20Lipstick-01.jpg" alt="Metallic Waterproof Liquid Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Metallic Waterproof Liquid Lipstick<br></h3>
+        <p>Smooth and creamy liquid lipstick with high shimmers and dotted glitters for a dimensional look. Waterproof, quick-drying, long-wearing. Paraben free.<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/80_Long-Lasting%20Waterproof%20Liquid%20Lipstick-01.jpg" alt="Long-Lasting Waterproof Liquid Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Long-Lasting Waterproof Liquid Lipstick<br></h3>
+        <p>Satiny with rich and vibrant colors. Long-wearing, smooth, and non-drying. Paraben free.<br><br>
+         </p>
+            </div>
+    </div>
+        </div>
+     <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/82_Lip%20Tint-01.jpg" alt="Lip Tint">
+            <div class="caption">
+        <h3 class="FOh3">Lip Tint<br></h3>
+        <p>Sheer and long lasting color giving you a natural look.<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/83_Lip%20Topper-01.jpg" alt="Lip Topper">
+            <div class="caption">
+        <h3 class="FOh3">Lip Topper<br></h3>
+        <p>Transforms your matte lipstick to a metallic, glittery look. With high molecular compound for waterproof, and moisturizers to keep your lips from feeling dry. Paraben, alcohol, and oil free.<br>
+         </p>
+            </div>
+    </div>       
+</div>
+</div>
+        </div>
+    </div>
+
 
 <script type="text/JavaScript">
  var anchor = document.querySelector('a[href="#btt"]')
