--- a/formula_lipstick.html
+++ b/formula_lipstick.html
@@ -101,88 +101,99 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-07_lips_UML-01.jpg" alt="Ultra Matte Lipstick">
+      <img src="images/formula/68_Lip%20Balm-01.jpg" alt="Lip Balm">
             <div class="caption">
-        <h3 class="FOh3">Ultra Matte Lipstick<br></h3>
-        <p>● Retro matte style, opague, with vitamin E.
+        <h3 class="FOh3">Lip Balm<br></h3>
+        <p>Hydrating lip balm with aloe extract to soothe and almond oil to nourish.
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-09_lips_24K-01.jpg" alt="24K Gold Lipstick">
+      <img src="images/formula/70_Lipstick%20Palette-01.jpg" alt="Lipstick Palette">
             <div class="caption">
-        <h3 class="FOh3">24K Gold Lipstick<br></h3>
-        <p>● Luxurious, smooth and glides on easily. <br><br>
+        <h3 class="FOh3">Lipstick Palette<br></h3>
+        <p>Added anti-oxidant ingredients. Lightweight breathable oil. 
+Plant & lanolin synthetic wax to reduce lip lines. Moisturizing. Paraben free.
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-10_lips_CL-01.jpg" alt="Cooling Lipstick">
+      <img src="images/formula/71_Lip%20Mousse-01.jpg" alt="Lip Mousse">
             <div class="caption">
-        <h3 class="FOh3">Cooling Lipstick<br></h3>
-        <p>● Long wearing with a cooling sensation.<br><br><br>
+        <h3 class="FOh3">Lip Mousse<br></h3>
+        <p>Matte finish, airy texture, applies smoothly, high pigment, long-lasting.
+         </p><br><br>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/72_Moist%20Lipstick-01.jpg" alt="Moist Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Moist Lipstick<br></h3>
+        <p>With Vitamin E and hydrating properties. Applies smoothly and gives you a dewy shine.Paraben free.
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-11_lips_LL-01.jpg" alt="Lip Liner">
+      <img src="images/formula/73_Glossy%20Lipstick-01.jpg" alt="Glossy Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Glossy Lipstick<br></h3>
+        <p>Shine.Moisturizing and anti-oxidant. With light  vanilla aroma. 
+         </p>
+            </div>
+    </div>
+        </div>     
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/74_Sheer%20Gold%20Lipstick-01.jpg" alt="Sheer Gold Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Sheer Gold Lipstick<br></h3>
+        <p>Different colour gold shimmers combined to create a sheer lip colour with gold sparkles. With Vitamin E. Paraben free. </p><br> <br>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/75_Matte%20Lipstick-01.jpg" alt="Matte Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Matte Lipstick<br></h3>
+        <p>A rich and smooth formulathat settles into a light, elegant matte finish. Hydrating and paraben free.<br> 
+         </p>
+            </div>
+    </div>
+        </div>
+           <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/76_Velvet%20Lipstick-01.jpg" alt="Velvet Lipstick">
+            <div class="caption">
+        <h3 class="FOh3">Velvet Lipstick<br></h3>
+        <p>A creamy velvet that blankets your lips with rich vibrant colours. Paraben free.</p><br>
+            </div>
+    </div>
+        </div>
+<div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/85_Lip%20Liner-01.jpg" alt="Lip Liner">
             <div class="caption">
         <h3 class="FOh3">Lip Liner<br></h3>
-        <p>● Smooth and Pigmented, Long Wearing, comes with a sharpener cap.
+        <p>Smooth, pigmented, long wearing, and waterproof. Comes with a sharpener cap.<br><br>
          </p>
             </div>
     </div>
         </div>
-<!--old-->         
-         <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_lips_3-01.jpg" alt="Slim Lipstick">
+      <img src="images/formula/86_Lip%20Crayon-01.jpg" alt="Lip Crayon">
             <div class="caption">
-        <h3 class="FOh3">Slim Lipstick<br></h3>
-        <p>● Smooth application with a vibrant color.  <br>      ● Jojoba oil enhanced moisturization with a pearl shimmer. Perfect even for a winter day!<br></p><br> <br>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_4-01.jpg" alt="Triple Lipcolor">
-            <div class="caption">
-        <h3 class="FOh3">Triple Lipcolor<br></h3>
-        <p>● Sheer beauty of triple-layered colors.   <br>      ● Get those natural yet seductive lips with just a swipe.<br><br> <br> <br> <br> 
-         </p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_6-01.jpg" alt="Tint Lipliner">
-            <div class="caption">
-        <h3 class="FOh3">Tint Lipliner<br></h3>
-        <p>● Matte effect formula with high pigment. Added Vitamin B5 to moisturize lips and diminish lip lines.   <br>      ● Alternatives such as Paraben-free formula that meets FDA & EEC standards, and formulas with Microcare® MTI  are available. <br>       ● There are many nibs for different functions for your choice.</p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_7-01.jpg" alt="2 in1 Lipstick">
-            <div class="caption">
-        <h3 class="FOh3">2 in1 Lipstick<br></h3>
-        <p>● The centre part formulated with nourishing essences, provides moisturize yet perfect look.  <br>      ● The unique transparent pigment particle creates fresh & crystal shine look. 。</p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_8-01.jpg" alt="Nourishing Lipcolor">
-            <div class="caption">
-        <h3 class="FOh3">Nourishing Lipcolor<br></h3>
-        <p>● A pleasurable nourish rich in Vitamin E and aloe essence that moisturizes and repairs to provide your lips with the perfect protection.<br>
+        <h3 class="FOh3">Lip Crayon<br></h3>
+        <p>Smooth and pigmented, long wearing, improve lip lines.<br>
          </p>
             </div>
     </div>
