--- a/twformula_CHEEKS.html
+++ b/twformula_CHEEKS.html
@@ -91,7 +91,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </ul>
         </div>
     <!--產品-->
-
 <div class="col-xs-9 col-md-10">
     <img src="images/formula/2018formula_cheeks-01.jpg"  class="img-responsive aboutimage">
     <div style="height:20px;"></div>
@@ -104,67 +103,75 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row">
  <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-04_face_BS-01.jpg" alt="頰紅棒">
+      <img src="images/formula/20_Cream%20Blusher-01.jpg" alt="頰紅棒">
             <div class="caption">
-        <h3 class="twFOh3">頰紅棒<br></h3>
-        <p>● 添加六胜肽&玻尿酸<br>● 上妝兼保養<br>● 自然亮澤及發色<br>● 清爽不油膩<br>● 持久防水 </p>
+        <h3 class="twFOh3">腮紅膏<br></h3>
+        <p>● 色彩飽和度高<br>● 易塗抹，顯色性佳<br>● 妝容持久 </p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-09_face_BlushP-01.jpg" alt="粉撲腮紅">
+      <img src="images/formula/21_Powder%20Blusher-01.jpg" alt="腮紅粉">
             <div class="caption">
-        <h3 class="twFOh3">粉撲腮紅<br></h3>
-        <p>● 粉末細緻服貼<br>● 粉撲上妝更方便<br>● 擺脫油光<br><br><br> </p>
+        <h3 class="twFOh3">腮紅粉<br></h3>
+        <p>● 添加珠光，使臉部提亮效果<br>● 顯色性佳且可修飾臉部妝容<br>● 易塗抹<br> </p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-10_face_MB-01.jpg" alt="慕絲腮紅">
+      <img src="images/formula/22_Blusher%20Stick-01.jpg" alt="腮紅棒">
             <div class="caption">
-        <h3 class="twFOh3">慕絲腮紅<br></h3>
-        <p>● Water in Oil油包水技術<br>● 絲滑水潤<br>● 透氣無粉感<br>● 持久防水<br><br><br> </p>
+        <h3 class="twFOh3">腮紅棒<br></h3>
+        <p>● 添加六胜肽&玻尿酸<br>● 上妝兼保養<br>● 自然亮澤及發色<br>● 清爽不油膩<br>● 持久防水</p>
             </div>
     </div>
         </div>
      <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/5-12_series_CB-01.jpg" alt="氣墊腮紅">
+      <img src="images/formula/23_Lip%20&%20Cheek%20Tint-01.jpg" alt="唇頰液">
             <div class="caption">
-        <h3 class="twFOh3">氣墊腮紅<br></h3>
-        <p>● 添加草本精華<br>● 水潤不油膩<br>● 防水不易脫妝<br>● 發色持久輕透<br>● 迷人光澤<br> </p>
+        <h3 class="twFOh3">唇頰液<br></h3>
+        <p>● 保濕不黏膩<br>● 持久防水不易脫落<br>● 以全水性的形式呈現<br> </p>
             </div>
     </div>
-        </div>
-<!--old-->    
+        </div>   
            <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_blush_3-01.jpg" alt="Creamy Blusher">
+      <img src="images/formula/26_Mousse%20Blusher-01.jpg" alt="Creamy Blusher">
             <div class="caption">
-        <h3 class="twFOh3">腮紅膏<br></h3>
-        <p>● 為克服粉狀腮紅的不持久而研發。質地細緻滑順不油膩,與肌膚緊緊貼合,像是自然散發的光澤紅暈,一整天持續甜美不脫妝!<br><br> <br><br><br><br><br></p>
+        <h3 class="twFOh3">幕斯腮紅<br></h3>
+        <p>● 添加彈性體，絲滑<br>● 透氣霧面光感<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_blush_4-01.jpg" alt="Liquid Blusher">
+      <img src="images/formula/27_Cushion%20Blusher-01.jpg" alt="氣墊腮紅">
             <div class="caption">
-        <h3 class="twFOh3">頰紅液<br></h3>
-        <p>● 如寶石般透著晶瑩的光澤,可同時塗抹於雙頰與唇部,質地清爽持久不易掉色 ,就像天生唇色般自然! <br>
-        <br><br><br><br><br><br><br></p>
+        <h3 class="twFOh3">氣墊腮紅<br></h3>
+        <p>● 好上色<br>● 服貼且不易掉色<br>● 修飾臉部輪廓<br>● 增添氣色<br></p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_blush_1-01.jpg" alt="Pattern Pressed Powder">
+      <img src="images/formula/28_Baked%20Blusher-01.jpg" alt="烤粉腮紅">
             <div class="caption">
-        <h3 class="twFOh3">多色壓粉<br></h3>
-        <p>● 多色壓粉設計讓彩妝變的更有趣、多元,更賞心悅目!!<br>
-         <br></p>
+        <h3 class="twFOh3">烤粉腮紅<br></h3>
+        <p>● 超顯色高比例珠光<br>● 輕鬆創造金屬般奢華妝感<br>
+         </p>
+            </div>
+    </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/22_Blusher%20Stick-01.jpg" alt="烤粉腮紅">
+            <div class="caption">
+        <h3 class="twFOh3">壓粉腮紅<br></h3>
+        <p>● 服貼肌膚<br>● 多樣化樣式<br>
+         </p>
             </div>
     </div>
         </div>
