--- a/twformula_Contour.html
+++ b/twformula_Contour.html
@@ -91,7 +91,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </ul>
         </div>
     <!--產品-->
-
 <div class="col-xs-9 col-md-10">
     <img src="images/formula/2018formula_cheeks-01.jpg"  class="img-responsive aboutimage">
     <div style="height:20px;"></div>
@@ -104,9 +103,39 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-01_face_BHC-01.jpg" alt="彈力修容餅">
+      <img src="images/formula/29_Contouring%20Stick-01.jpg" alt="提亮修容棒">
             <div class="caption">
-        <h3 class="twFOh3">彈力修容餅<br></h3>
+        <h3 class="twFOh3">提亮修容棒<br></h3>
+        <p>● 瞬間提亮<br>● 立體修飾<br>● 創造細緻小臉妝容<br>
+        </p>
+            </div>
+    </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/30_Liquid%20Glow-01.jpg" alt="提亮液">
+            <div class="caption">
+        <h3 class="twFOh3">提亮液<br></h3>
+        <p>● 珠光亮澤<br>●添加維他命E<br>● 柔焦效果的硅彈性體 <br>● 清爽不油膩<br>
+        </p>
+            </div>
+    </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/31_Baked%20Highlighter-01.jpg" alt="烤粉提亮">
+            <div class="caption">
+        <h3 class="twFOh3">烤粉提亮<br></h3>
+        <p>● 質地輕盈服貼<br>● 層層疊擦,打造似有若無的自然光澤<br><br><br>
+        </p>
+            </div>
+    </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/32_Bouncy%20Highlighter-01.jpg" alt="彈力提亮餅">
+            <div class="caption">
+        <h3 class="twFOh3">彈力提亮餅<br></h3>
         <p>● 矽膠Q粉餅<br>● 霧面或光澤打造細緻妝容<br>● 由膏轉變為粉末<br>● 清爽不油膩 <br>
         </p>
             </div>
@@ -114,50 +143,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-02_face_CCP-01.jpg" alt="提亮修容膏盤">
+      <img src="images/formula/33_Cream%20Highlight%20&%20Contour%20Palette-01.jpg" alt="提亮/修容餅">
             <div class="caption">
         <h3 class="twFOh3">提亮修容膏盤<br></h3>
-        <p>● 三合一<br>● 輕鬆打造3D立體妝容<br>● 膏狀腮紅帶出持久好氣色 <br><br><br>
+        <p>● 輕鬆打造3D立體妝容<br>● 膏狀腮紅帶出持久好氣色<br><br><br>
         </p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-03_face_SCS-01.jpg" alt="提亮修容棒">
+      <img src="images/formula/34_Back-Filled%20Highlighter-01.jpg" alt="提亮倒灌粉">
             <div class="caption">
-        <h3 class="twFOh3">提亮修容棒<br></h3>
-        <p>● 瞬間提亮<br>● 立體修飾<br>● 創造細緻小臉妝容<br><br><br>
+        <h3 class="twFOh3">提亮倒灌粉<br></h3>
+        <p>● 不易破粉倒灌技術<br>●提升珠光亮度更吸睛<br><br><br>
         </p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-05_face_MHP-01.jpg" alt="多色提亮盤">
+      <img src="images/formula/35_Highlight%20&%20Contour%20Palette-01.jpg" alt="提亮修容粉盤">
             <div class="caption">
-        <h3 class="twFOh3">多色提亮盤<br></h3>
-        <p>● 添加使肌膚透氣保濕的蠶絲油<br>● 細緻柔滑<br>● 適合各種膚色<br>● 自體發光妝容 <br>
-        </p>
-            </div>
-    </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/2-06_face_MC-01.jpg" alt="提亮/修容餅">
-            <div class="caption">
-        <h3 class="twFOh3">提亮/修容餅<br></h3>
-        <p>● 霧面質地<br>● 粉質細緻服貼<br>● 打造優雅氣質的立體妝容<br>
-        </p>
-            </div>
-    </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/2-07_face_CHP-01.jpg" alt="混色修容餅">
-            <div class="caption">
-        <h3 class="twFOh3">混色修容餅<br></h3>
-        <p>● 打亮修容一次完成<br>● 粉質細緻柔滑<br>● 散發自然光澤<br>
+        <h3 class="twFOh3">提亮修容粉盤<br></h3>
+        <p>● 珠光打亮&深色修容輕鬆打造3D立體精緻輪廓<br>
         </p>
             </div>
     </div>
@@ -169,7 +178,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 </div>
-    
 <script type="text/JavaScript">
  var anchor = document.querySelector('a[href="#btt"]')
 var target = document.getElementById('btt')
