--- a/twformula_EMascara.html
+++ b/twformula_EMascara.html
@@ -104,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
       <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-01_eye_LM-01.jpg" alt="纖長睫毛膏">
+      <img src="images/formula/52_Lengthening%20Mascara-01.jpg" alt="纖長睫毛膏">
             <div class="caption">
         <h3 class="twFOh3">纖長睫毛膏<br></h3>
         <p>● 添加纖維<br>● 睫毛根根分明<br>● 防水抗油<br>● 溫水可卸</p>
@@ -113,46 +113,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-02_eye_VM-01.jpg" alt="濃密睫毛膏">
+      <img src="images/formula/53_Volumizing%20Mascara-01.jpg" alt="濃密睫毛膏">
             <div class="caption">
         <h3 class="twFOh3">濃密睫毛膏<br></h3>
         <p>● 豐盈睫毛<br>● 眼妝更深邃<br>● 防水抗油<br>● 溫水可卸</p>
             </div>
     </div>
-        </div>
-      <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/3-03_eye_2in1M-01.jpg" alt="雙頭全效睫毛膏">
-            <div class="caption">
-        <h3 class="twFOh3">雙頭全效睫毛膏<br></h3>
-        <p>● 二合一<br>● 纖長又捲翹<br>● 豐厚型毛刷帶出豐盈睫毛<br>● 梳形刷子帶出根根分明睫毛持續延伸<br>● 防水抗油<br>● 溫水可卸</p>
-            </div>
-    </div>
-        </div>   
-<!--old-->  
-     <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_32-01.jpg" alt="Base Mascara">
-            <div class="caption">
-        <h3 class="twFOh3">睫毛飾底膏<br></h3>
-        <p>● 添加纖維及美容成份，上妝前打底能達到滋養、修護以及保護睫毛不受損傷的效果
-           ● 睫毛膏前使用，加強濃密捲翹效果<br>
-         </p>
-            </div>
-    </div>
-        </div>
- 
-    <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_32-01.jpg" alt="Lash Essences">
-            <div class="caption">
-        <h3 class="twFOh3">睫毛精華液<br></h3>
-        <p>● 添加B5及玻尿酸滋養睫毛、促進生長 <br>
-        </p>
-            </div>
-    </div>
-        </div>
-         
+        </div>         
     </div>
 </div>
 
