--- a/twformula_EYES.html
+++ b/twformula_EYES.html
@@ -103,25 +103,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-04_eye_CE-01.jpg" alt="大理石眼影膏">
+      <img src="images/formula/56_Eyeshadow%20Roller-01.jpg" alt="滾珠眼影粉">
             <div class="caption">
-        <h3 class="twFOh3">大理石眼影膏<br></h3>
-        <p>● 搭配粒徑大小不同的珠光粉末<br>● 半揮發性油脂<br>● 持久防水<br>● 閃耀鑽石光芒<br></p>
+        <h3 class="twFOh3">滾珠眼影粉<br></h3>
+        <p>● 高珠光閃粉<br>● 輕鬆上妝</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-07_eye_LEG-01.jpg" alt="亮片眼彩蜜">
+      <img src="images/formula/57_Loose%20Eyeshadow-01.jpg" alt="眼影粉">
             <div class="caption">
-        <h3 class="twFOh3">亮片眼彩蜜<br></h3>
-        <p>● 超飽和有色亮蔥<br>● 舒適塗抹感<br>● 瞬間點亮眼妝<br>● 持久防水抗暈<br></p>
+        <h3 class="twFOh3">眼影粉<br></h3>
+        <p>搭配不同粒徑珠光或亮蔥粉末，折射出更有層次的立體光澤。服貼持久又顯色<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-08_eye_EyeshadowP-01.jpg" alt="眼影盤">
+      <img src="images/formula/66_Eyeshadow%20Palette-01.jpg" alt="眼影盤">
             <div class="caption">
         <h3 class="twFOh3">眼影盤<br></h3>
         <p>● 金屬光+霧面+亮蔥濕眼影<br>● 協調配色<br>● 持久顯色<br>● 打造百變時尚妝感<br></p>
@@ -130,54 +130,108 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-11_eye_SE-01.jpg" alt="珠光眼彩筆">
+      <img src="images/formula/58_Pressed%20Glitter-01.jpg" alt="珠光眼彩筆">
             <div class="caption">
-        <h3 class="twFOh3">珠光眼彩筆<br></h3>
-        <p>●高滑順延展性<br>● 粗細珠光打造立體光澤<br>● 超防水耐汗<br></p>
+        <h3 class="twFOh3">亮蔥眼影膏<br></h3>
+        <p>● 閃耀高含量珠光<br>● 輕盈服貼</p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_1-01.jpg" alt="Metallic Eyeshadow">
+      <img src="images/formula/59_Satin%20Cream%20Eyeshadow-01.jpg" alt="Metallic Eyeshadow">
             <div class="caption">
-        <h3 class="twFOh3">金屬光眼影<br></h3>
-        <p>● 質地濕潤好沾取,柔滑細緻好塗抹,輕鬆創造服貼光澤又滋潤的魅力眼妝。<br>● 添加物理性的銀離子殺菌粉末在您擁有持久顯色眼妝的同時不必擔心眼影產生變質。<br><br><br><br></p>
+        <h3 class="twFOh3">絲綢眼影膏<br></h3>
+        <p>● 絲滑潤膚<br>● 飽和色澤<br>● 持久防水</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_4-01.jpg" alt="Back-filling Eyeshadow">
+      <img src="images/formula/60_Bouncy%20Cream%20Eyeshadow-01.jpg" alt="Back-filling Eyeshadow">
             <div class="caption">
-        <h3 class="twFOh3">倒灌粉<br></h3>
-        <p>● 多色的珠光交織出上質光輝，打造光漾眼部彩粧<br>
-            ● 添加美容成份，提高持粧度，使雙眸持續綻放美麗光澤<br>
-            ● 採用美容油基底，維持滑順質地及高透明感的顯色度<br><br><br></p>
+        <h3 class="twFOh3">彈力眼影膏<br></h3>
+        <p>● 閃耀高含量珠光<br>
+            ● Q彈質地</p><br>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_5-01.jpg" alt="Loose Eyeshadow">
+      <img src="images/formula/61_Marbled%20Cream%20Eyeshadow-01.jpg" alt="大理石眼影膏">
             <div class="caption">
-        <h3 class="twFOh3">眼影粉<br></h3>
-        <p>● 獨特顯色粒子，如寶石般閃爍<br>
-            ● 粉體細緻柔潤不飛粉<br></p>
+        <h3 class="twFOh3">大理石眼影膏<br></h3>
+        <p>● 搭配粒徑大小不同的珠光粉末<br>
+            ● 半揮發性油脂<br>● 持久防水<br>● 閃耀鑽石光芒</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_6-01.jpg" alt="Creamy Eyeshadow">
+      <img src="images/formula/62_Eyeshadow%20Mousse-01.jpg" alt="慕斯眼影">
             <div class="caption">
-        <h3 class="twFOh3">眼影膏<br></h3>
-        <p>● 果凍般質感眼彩，維持水嫩妝感<br>
-            ● 高度透明感光輝提升眼彩質感<br>
-            ● 完美平順服貼於眼瞼，長時間持續剛完粧般的美麗粧效與水潤感<br></p>
+        <h3 class="twFOh3">慕斯眼影<br></h3>
+        <p>● 添加彈性體，絲滑<br>
+            ● 透氣霧面光感</p><br><br>
             </div>         
     </div>
 </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/63_Eyeshadow%20Jelly-01.jpg" alt="眼彩凍">
+            <div class="caption">
+        <h3 class="twFOh3">眼彩凍<br></h3>
+        <p>● 水嫩果凍質地，輕柔服貼<br>
+            ● 散發自然光澤</p><br><br>
+            </div>         
+    </div>
+</div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/64_Glitter%20Liquid%20Eyeshadow-01.jpg" alt="亮片眼彩蜜">
+            <div class="caption">
+        <h3 class="twFOh3">亮片眼彩蜜<br></h3>
+        <p>● 超飽和有色亮蔥<br>
+            ● 舒適塗抹感<br>
+            ● 瞬間點亮眼妝<br>
+            ● 持久防水抗暈</p>
+            </div>         
+    </div>
+</div>
+      <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/64_Pearl%20Powder%20Liquid%20Eyeshadow-01.jpg" alt="珠光眼彩蜜">
+            <div class="caption">
+        <h3 class="twFOh3">珠光眼彩蜜<br></h3>
+        <p>● 超飽和有色珠光<br>
+            ● 舒適塗抹感<br>
+            ● 可當臥蠶蜜<br>
+            ● 持久防水抗暈</p>
+            </div>         
+    </div>
+</div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/65_Stylo%20Eyeshadow-01.jpg" alt="眼影筆">
+            <div class="caption">
+        <h3 class="twFOh3">眼影筆<br></h3>
+        <p>● 滑順延展性<br>
+            ● 粗細珠光打造立體光澤<br>
+            ● 超防水耐汗</p><br>
+            </div>         
+    </div>
+</div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/67_Baked%20Eyeshadow-01.jpg" alt="烤粉眼影">
+            <div class="caption">
+        <h3 class="twFOh3">烤粉眼影<br></h3>
+        <p>● 超顯色高比例珠光<br>
+            ● 輕鬆創造金屬般奢華妝感</p>
+            </div>         
+    </div>
+</div>
+         
     </div>
 </div>
     </div>
