--- a/twformula_Eyebrow.html
+++ b/twformula_Eyebrow.html
@@ -103,25 +103,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-16_eye_EbrowBP-01.jpg" alt="眉粉盤">
+      <img src="images/formula/37_Brow%20Pomade-01.jpg" alt="眉膏">
+            <div class="caption">
+        <h3 class="twFOh3">眉膏<br></h3>
+        <p>● 絲柔質地<br>● 顯色滑順易描繪<br>● 眉型線條分明俐落<br>● 輕超防水不暈染</p>
+            </div>
+    </div>
+        </div>
+          <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/39_Eyebrow%20Palette-01.jpg" alt="眉粉盤">
             <div class="caption">
         <h3 class="twFOh3">眉粉盤<br></h3>
-        <p>● 三色協調配色<br>● 最淺色可當鼻影<br>● 細緻服貼又顯色<br>● 輕鬆遮蓋眉毛空隙<br></p>
+        <p>● 三色協調配色<br>● 細緻服貼又顯色<br>● 輕鬆遮蓋眉毛空隙<br><br></p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-17_eye_EBKit-01.jpg" alt="眉彩組">
+      <img src="images/formula/38_Eyebrow%20Kit-01.jpg" alt="眉彩組">
             <div class="caption">
         <h3 class="twFOh3">眉彩組<br></h3>
-        <p>● 眉蠟讓妝感更持久立體<br>● 眉粉細緻服貼又顯色<br>● 輕鬆遮蓋眉毛空隙<br></p>
+        <p>● 眉蠟讓妝感更持久立體<br>● 眉粉細緻服貼又顯色<br>● 輕鬆遮蓋眉毛空隙<br><br></p>
             </div>
     </div>
         </div>
      <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-18_eye_EBP-01.jpg" alt="旋轉眉筆">
+      <img src="images/formula/41_Eyebrow%20Pen-01.jpg" alt="旋轉眉筆">
             <div class="caption">
         <h3 class="twFOh3">旋轉眉筆<br></h3>
         <p>● 質地滑順顯色<br>● 輕鬆描繪眉型<br>● 防水持久不易掉色<br><br></p>
@@ -130,25 +139,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-19_eye_31EBP-01.jpg" alt="三用眉筆">
+      <img src="images/formula/42_3%20in1%20Eyebrow%20Pen-01.jpg" alt="三用眉筆">
             <div class="caption">
         <h3 class="twFOh3">三用眉筆<br></h3>
-        <p>● 三合一多功能<br>● 隨心搭配<br>● 質地服貼柔滑細緻<br>● 打造持久防水又立體細緻眉型<br></p>
+        <p>● 三合一多功能<br>● 隨心搭配<br>● 質地服貼柔滑細緻<br>● 打造持久防水又立體細緻眉型<br></p><br>
             </div>
     </div>
          </div>
      <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-21_eye_GBP-01.jpg" alt="眉膠筆">
+      <img src="images/formula/45_Gel%20Brow%20Pen-01.jpg" alt="眉膠筆">
             <div class="caption">
         <h3 class="twFOh3">眉膠筆<br></h3>
-        <p>● 2mm極細筆尖<br>● 輕鬆描繪出根根分明，生動的眉毛髮絲<br>● 高氣密筆管<br>● 防水不暈染<br></p>
+        <p>● 極細筆尖<br>● 筆觸滑順<br>● 畫出俐落眉型<br>● 高氣密型筆管<br>● 油性超防水配方</p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-22_eye_POBT-01.jpg" alt="撕除式染眉膠">
+      <img src="images/formula/47_Peel-Off%20Brow%20Tint-01.jpg" alt="撕除式染眉膠">
             <div class="caption">
         <h3 class="twFOh3">撕除式染眉膠<br></h3>
         <p>● 搶救稀疏眉毛<br>● 可長時間附著24hr不掉色<br>● 快乾好撕<br>● 發色自然<br><br><br></p>
@@ -158,50 +167,39 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          
           <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-24_eye_LBP-01.jpg" alt="水眉筆">
+      <img src="images/formula/44_Microblading%20Brow%20Pen-01.jpg" alt="水眉筆">
             <div class="caption">
         <h3 class="twFOh3">水眉筆<br></h3>
-        <p>● 斜口筆尖設計<br>● 任意調整眉毛粗細<br>● 持久防水<br>● 發色自然<br></p>
+        <p>● 斜口筆尖設計<br>● 任意調整眉毛粗細<br>● 持久防水<br>● 發色自然<br><br></p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/5-13_series_CBG-01.jpg" alt="氣墊眉膏">
+      <img src="images/formula/40_Cushion%20Brow%20Gel-01.jpg" alt="氣墊眉膏">
             <div class="caption">
         <h3 class="twFOh3">氣墊眉膏<br></h3>
-        <p>● 發色自然<br>● 防水抗油抗汗<br>● 不黏膩不緊繃<br>● 易附著<br>● 輕鬆遮蓋眉毛空隙<br></p>
+        <p>● 發色自然<br>● 防水抗油抗汗<br>● 不黏膩不緊繃<br>● 易附著<br>● 輕鬆遮蓋眉毛空隙<br><br></p>
             </div>
     </div>
         </div>
-<!--old-->
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_44-01.jpg" alt="Waterproof Eyebrow Cream">
+      <img src="images/formula/43_Powder%20to%20Liquid%20Brow%20Color-01.jpg" alt="Waterproof Eyebrow Cream">
             <div class="caption">
-        <h3 class="twFOh3">眉膏<br></h3>
-        <p>● 發色自然,質地柔滑,能輕鬆填補修飾眉型。<br>
-            ● 以海綿毛刷塗抹更上手,暈染出自信持久的迷人眉妝。<br><br><br><br><br><br><br></p>
+        <h3 class="twFOh3">水眉粉<br></h3>
+        <p>● 粉包水配方<br>
+            ● 發色自然持久<br>● 搭配氣墊毛刷輕鬆填補空隙<br><br><br><br><br><br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_46-01.jpg" alt="Eyebrow Mascara">
+      <img src="images/formula/46_Brow%20Tint-01.jpg" alt="Eyebrow Mascara">
             <div class="caption">
         <h3 class="twFOh3">染眉膏<br></h3>
-        <p>● 發色度極佳的膠狀質地,持久耐汗,使用方便好上手!   <br>   
-            ● 只要輕輕一刷,立即擁有自然迷人的眉色!。<br><br></p>
-            </div>         
-    </div>
-</div>
-        <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_47-01.jpg" alt="Eyebrow Coating">
-            <div class="caption">
-        <h3 class="twFOh3">眉毛定型液<br></h3>
-        <p>● 快乾配方，眉彩商品前後皆可使用<br>
-           ● 眉彩後定型，長效自然<br></p>
+        <p>● 顏色飽和遮蓋力佳<br>   
+            ● 輕鬆變換眉色<br>● 持久防水不暈染<br></p>
             </div>         
     </div>
 </div>
