--- a/twformula_Eyeliner.html
+++ b/twformula_Eyeliner.html
@@ -103,39 +103,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-13_eye_LEL-01.jpg" alt="眼線液筆">
+      <img src="images/formula/48_Eyeliner%20Gel-01.jpg" alt="眼線膠">
+            <div class="caption">
+        <h3 class="twFOh3">眼線膠<br></h3>
+        <p>● 防水耐汗不暈染<br>● 快乾不緊繃<br></p>
+            </div>
+    </div>
+        </div>
+<div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/49_Liquid%20Eyeliner-01.jpg" alt="眼線液筆">
             <div class="caption">
         <h3 class="twFOh3">眼線液筆<br></h3>
-        <p>● 極致濃黑<br>● 高附著力<br>● 筆觸滑順<br>● 防水耐汗不暈染<br>●  創造俐落眼妝<br></p>
+        <p>● 高附著力<br>● 筆觸滑順<br>● 防水耐汗不暈染<br>● 創造俐落眼妝</p>
             </div>
     </div>
         </div>
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-14_eye_GELP-01.jpg" alt="眼膠筆">
+      <img src="images/formula/50_Dip%20Eyeliner-01.jpg" alt="沾取式眼線液">
             <div class="caption">
-        <h3 class="twFOh3">眼膠筆<br></h3>
-        <p>● 極細筆尖<br>● 筆觸滑順<br>● 輕鬆描繪細緻眼線<br>● 高氣密型筆管<br>● 油性超防水配方<br>● 持久濃黑<br></p>
-            </div>
-    </div>
-        </div>
-<div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/3-15_eye_DEL-01.jpg" alt="眼線液">
-            <div class="caption">
-        <h3 class="twFOh3">眼線液<br></h3>
+        <h3 class="twFOh3">沾取式眼線液<br></h3>
         <p>● 迷人的金屬珠光眼線<br>● 方便控制水量<br>● 滑順不斷線<br>● 防水抗暈染<br><br><br></p>
             </div>
     </div>
         </div>
-<!--old-->
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_21-01.jpg" alt="Liner & Shadow Pencil">
+      <img src="images/formula/51_Gel%20Eyeliner%20Pen-01.jpg" alt="眼線膠筆">
             <div class="caption">
-        <h3 class="twFOh3">眼線鉛筆<br></h3>
-        <p>● 筆頭柔軟且色彩濃郁的眼線蠟筆 <br>
-           ● 清晰顯色，抗暈染<br></p>
+        <h3 class="twFOh3">眼線膠筆<br></h3>
+        <p>● 極細筆尖<br>
+           ● 筆觸滑順<br>● 輕鬆描繪細緻眼線<br>● 高氣密型筆管<br>● 油性超防水配方<br>● 持久濃黑</p>
             </div>
     </div>
         </div>
